# piper2-prototype

./: .gitignore  CMakeLists.txt  Phenomes.cpp  README.md  example.cpp  phenomes cpp test copy paste.txt
libpiper2/include/: piper2.h  piper2_impl.hpp
libpiper2/src/: piper2.cpp
models/: en_US-phonemizer.onnx.json  en_US-stress.onnx
